[gd_scene format=4 uid="uid://vn680b4hvj3x"]

[ext_resource type="Script" uid="uid://ccci32tj3j1fq" path="res://scripts/UI/battle_script.gd" id="1_fu7w4"]
[ext_resource type="Script" uid="uid://dy5stdv0mwwiu" path="res://scripts/UI/skill_list.gd" id="2_okw7b"]
[ext_resource type="Texture2D" uid="uid://rhw6r8lf8r0n" path="res://assets/menu/UI_TravelBook_BookCover01a.png" id="3_i8jxl"]
[ext_resource type="FontFile" uid="uid://d4fqcjicieold" path="res://assets/font/PixelPurl.ttf" id="4_jvqxm"]
[ext_resource type="Texture2D" uid="uid://cpyoj2ajuoijt" path="res://assets/menu/UI_TravelBook_Marker01a.png" id="5_dxtsq"]
[ext_resource type="Texture2D" uid="uid://ceidsb110q7ug" path="res://assets/menu/UI_TravelBook_Marker01a inverted.png" id="6_gwqu3"]
[ext_resource type="Shader" uid="uid://bhllwj1vey6kg" path="res://shaders/round_corners.gdshader" id="7_e8pcg"]
[ext_resource type="Texture2D" uid="uid://bkugys8878hd" path="res://assets/testsprites/placeholder_floornwall_goodsize.png" id="8_ryxhp"]
[ext_resource type="Texture2D" uid="uid://p1r7l118n6so" path="res://assets/map-tiles/16x16 dungeon ii wall reconfig v04 spritesheet.png" id="9_qf25x"]
[ext_resource type="Texture2D" uid="uid://dasnbfy8q0ie" path="res://assets/fight_animations/player_2hit.png" id="10_tqc8e"]
[ext_resource type="Texture2D" uid="uid://b8npjqrcm5ova" path="res://assets/fight_animations/Fight-Animation-2Hit.png" id="11_12d72"]
[ext_resource type="Texture2D" uid="uid://b2h43jwgxfx6e" path="res://assets/fight_animations/Single-Hit-Flash.png" id="12_wafox"]
[ext_resource type="Texture2D" uid="uid://i7gvsnx5i4bw" path="res://assets/fight_animations/Fight-Animation-3Hit.png" id="13_5dqi7"]
[ext_resource type="Theme" uid="uid://do40vcwiibb8g" path="res://assets/theme/HealthBar.tres" id="14_ubutp"]
[ext_resource type="Texture2D" uid="uid://drnogsosojksh" path="res://assets/menu/inventar_slot.png" id="15_prx66"]
[ext_resource type="Script" uid="uid://cq62k1y4hep8s" path="res://scripts/UI/message_container.gd" id="16_d23n6"]
[ext_resource type="Texture2D" uid="uid://ebhbokd4jrcf" path="res://assets/menu/c9a4d2bf1afc262.png" id="17_oxy7j"]
[ext_resource type="Texture2D" uid="uid://usclqp0io56r" path="res://assets/menu/UI_TravelBook_Line01a.png" id="18_5vkhy"]
[ext_resource type="Texture2D" uid="uid://cen3xmvl56h11" path="res://assets/menu/pixil-frame-0(1).png" id="19_nlk32"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_66ngm"]
content_margin_left = 8.0
content_margin_top = 0.0
content_margin_right = 6.0
content_margin_bottom = 0.0
texture = ExtResource("5_dxtsq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_22uqi"]
content_margin_left = 8.0
content_margin_top = 0.0
content_margin_right = 6.0
content_margin_bottom = 0.0
texture = ExtResource("6_gwqu3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_03edq"]
content_margin_left = 8.0
content_margin_top = 0.0
content_margin_right = 6.0
content_margin_bottom = 0.0
texture = ExtResource("6_gwqu3")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_22uqi"]
shader = ExtResource("7_e8pcg")
shader_parameter/radius = 0.2

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_a12nh"]
texture = ExtResource("8_ryxhp")
0:0/0 = 0
1:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vceff"]
texture = ExtResource("9_qf25x")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
10:10/0 = 0
11:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0

[sub_resource type="TileSet" id="TileSet_lpir7"]
sources/0 = SubResource("TileSetAtlasSource_a12nh")
sources/1 = SubResource("TileSetAtlasSource_vceff")

[sub_resource type="AtlasTexture" id="AtlasTexture_mpb26"]
atlas = ExtResource("10_tqc8e")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u087"]
atlas = ExtResource("10_tqc8e")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqtyt"]
atlas = ExtResource("10_tqc8e")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a2ah"]
atlas = ExtResource("10_tqc8e")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikjs2"]
atlas = ExtResource("10_tqc8e")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rdfn"]
atlas = ExtResource("10_tqc8e")
region = Rect2(200, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_r0ctv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpb26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u087")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqtyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a2ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikjs2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rdfn")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_saiin"]
atlas = ExtResource("11_12d72")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd63g"]
atlas = ExtResource("11_12d72")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpf3k"]
atlas = ExtResource("11_12d72")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi5l8"]
atlas = ExtResource("11_12d72")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jt4d8"]
atlas = ExtResource("11_12d72")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kl6ie"]
atlas = ExtResource("11_12d72")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1m01a"]
atlas = ExtResource("11_12d72")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv4so"]
atlas = ExtResource("12_wafox")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_eivww"]
atlas = ExtResource("12_wafox")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwtbh"]
atlas = ExtResource("12_wafox")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0g0v"]
atlas = ExtResource("12_wafox")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_at2n2"]
atlas = ExtResource("12_wafox")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_e50ek"]
atlas = ExtResource("12_wafox")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekamt"]
atlas = ExtResource("13_5dqi7")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_djc8l"]
atlas = ExtResource("13_5dqi7")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4dll"]
atlas = ExtResource("13_5dqi7")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0caf"]
atlas = ExtResource("13_5dqi7")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_61i1y"]
atlas = ExtResource("13_5dqi7")
region = Rect2(320, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_saiin"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_saiin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd63g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpf3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi5l8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jt4d8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kl6ie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1m01a")
}],
"loop": false,
"name": &"double_strike",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv4so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eivww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwtbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0g0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_at2n2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e50ek")
}],
"loop": false,
"name": &"single_strike",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekamt")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_djc8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4dll")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_p0caf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61i1y")
}],
"loop": false,
"name": &"triple_strike",
"speed": 8.0
}]

[node name="Battle" type="CanvasLayer" unique_id=1395063500]
script = ExtResource("1_fu7w4")

[node name="Battle_root" type="Node2D" parent="." unique_id=1671988325]
scale = Vector2(3, 3)

[node name="ItemList" type="ItemList" parent="Battle_root" unique_id=428069960]
offset_left = 86.0
offset_top = 81.0
offset_right = 210.0
offset_bottom = 157.0
focus_mode = 0
script = ExtResource("2_okw7b")

[node name="TextureRect" type="TextureRect" parent="Battle_root/ItemList" unique_id=1033038157]
layout_mode = 0
offset_top = -0.99998474
offset_right = 124.0
offset_bottom = 77.000015
texture = ExtResource("3_i8jxl")
expand_mode = 1

[node name="TabBar" type="TabBar" parent="Battle_root/ItemList" unique_id=1104409895]
layout_mode = 0
offset_left = 1.9999948
offset_top = 0.6666666
offset_right = 207.20834
offset_bottom = 31.666666
scale = Vector2(0.64, 0.64)
focus_mode = 0
theme_override_colors/font_unselected_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_jvqxm")
theme_override_styles/tab_unselected = SubResource("StyleBoxTexture_66ngm")
theme_override_styles/tab_hovered = SubResource("StyleBoxTexture_22uqi")
theme_override_styles/tab_selected = SubResource("StyleBoxTexture_03edq")
current_tab = 0
tab_count = 3
tab_0/title = "Skills"
tab_0/tooltip = "Abilities your Character posesses"
tab_1/title = "Items"
tab_1/tooltip = "Make use of what you found"
tab_2/title = "Actions"
tab_2/tooltip = "Generic Actions"

[node name="ColorRect" type="ColorRect" parent="Battle_root/ItemList" unique_id=1937388352]
material = SubResource("ShaderMaterial_22uqi")
layout_mode = 0
offset_left = 2.1666718
offset_top = 20.333336
offset_right = 121.16667
offset_bottom = 76.333336
color = Color(0.28627452, 0.2, 0.2, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="Battle_root/ItemList" unique_id=12879542]
layout_mode = 0
offset_left = 3.5
offset_top = 23.0
offset_right = 193.5
offset_bottom = 85.0
scale = Vector2(0.62, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="Battle_root/ItemList/ScrollContainer" unique_id=1465506574]
custom_minimum_size = Vector2(170, 50)
layout_mode = 2

[node name="TileMapLayer" type="TileMapLayer" parent="Battle_root" unique_id=2044619669]
tile_map_data = PackedByteArray("AAAAAAUAAQABAAgAAAAAAAYAAQAAAAgAAAAAAAcAAQABAAkAAAAAAAgAAQAAAAgAAAAAAAkAAQABAAgAAAABAAkAAQAAAAgAAAACAAkAAQAAAAgAAAADAAkAAQAAAAgAAAAEAAkAAQABAAgAAAAEAAgAAQAAAAgAAAAEAAcAAQABAAkAAAAEAAYAAQAAAAgAAAAEAAUAAQABAAgAAAADAAUAAQABAAkAAAACAAUAAQAAAAgAAAABAAUAAQAAAAgAAAABAAYAAQABAAkAAAABAAcAAQAAAAgAAAABAAgAAQABAAgAAAACAAgAAQABAAkAAAADAAgAAQAAAAgAAAADAAcAAQAAAAgAAAADAAYAAQABAAgAAAACAAYAAQAAAAgAAAACAAcAAQAAAAgAAAA=")
tile_set = SubResource("TileSet_lpir7")

[node name="EnemyPosition" type="Marker2D" parent="Battle_root" unique_id=1499421336]
position = Vector2(37, 30)

[node name="player_attack_anim" type="AnimatedSprite2D" parent="Battle_root/EnemyPosition" unique_id=1752526242]
sprite_frames = SubResource("SpriteFrames_r0ctv")
frame = 5
frame_progress = 1.0

[node name="PlayerPosition" type="Marker2D" parent="Battle_root" unique_id=786789383]
position = Vector2(39.333332, 120.66667)

[node name="enemy_attack_anim" type="AnimatedSprite2D" parent="Battle_root/PlayerPosition" unique_id=465486656]
sprite_frames = SubResource("SpriteFrames_saiin")
animation = &"triple_strike"

[node name="Enemy_HPBar" type="ProgressBar" parent="Battle_root" unique_id=710399650]
offset_left = 45.0
offset_top = 62.0
offset_right = 85.0
offset_bottom = 80.0
scale = Vector2(1, 0.7)
size_flags_vertical = 4
theme = ExtResource("14_ubutp")
theme_override_fonts/font = ExtResource("4_jvqxm")

[node name="Enemy_hp_label" type="Label" parent="Battle_root" unique_id=1187527842]
offset_left = 2.6666667
offset_top = 61.000004
offset_right = 85.666664
offset_bottom = 84.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("4_jvqxm")
text = "Enemy HP:"
horizontal_alignment = 1
vertical_alignment = 2

[node name="player_hp_label" type="Label" parent="Battle_root" unique_id=1864331501]
offset_left = 129.33334
offset_top = 63.0
offset_right = 208.33333
offset_bottom = 86.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("4_jvqxm")
text = "Player HP:"
vertical_alignment = 1

[node name="Player_HPBar" type="ProgressBar" parent="Battle_root" unique_id=1521414318]
offset_left = 166.0
offset_top = 62.0
offset_right = 206.0
offset_bottom = 80.0
scale = Vector2(1, 0.7)
theme = ExtResource("14_ubutp")
theme_override_fonts/font = ExtResource("4_jvqxm")

[node name="TextureRect2" type="TextureRect" parent="Battle_root" unique_id=837173725]
z_index = -1
offset_left = 79.0
offset_top = 2.0
offset_right = 212.0
offset_bottom = 82.0
scale = Vector2(0.9938794, 0.7350163)
texture = ExtResource("15_prx66")
expand_mode = 1

[node name="message_container" type="ScrollContainer" parent="Battle_root/TextureRect2" unique_id=695246170]
layout_mode = 0
offset_left = 7.0
offset_top = 11.0
offset_right = 197.0
offset_bottom = 81.0
scale = Vector2(0.62, 0.8)
script = ExtResource("16_d23n6")

[node name="VBoxContainer" type="VBoxContainer" parent="Battle_root/TextureRect2/message_container" unique_id=738247885]
custom_minimum_size = Vector2(170, 50)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 6
alignment = 1

[node name="ColorRect" type="ColorRect" parent="." unique_id=1535860157]
z_index = -2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.16717109, 0.00046630923, 0, 1)

[node name="ColorRect2" type="TextureRect" parent="." unique_id=1093715669]
self_modulate = Color(0.25565878, 0.25565878, 0.25565878, 1)
z_index = -1
offset_left = 38.0
offset_top = 31.0
offset_right = 78.0
offset_bottom = 71.0
scale = Vector2(3.6799989, 3.08)
mouse_filter = 2
texture = ExtResource("17_oxy7j")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="." unique_id=1217189958]
offset_top = 236.0
offset_right = 160.0
offset_bottom = 237.0
scale = Vector2(4, 4)
texture = ExtResource("18_5vkhy")
expand_mode = 1
stretch_mode = 1

[node name="TextureRect" type="TextureRect" parent="." unique_id=240264668]
offset_right = 640.0
offset_bottom = 480.0
mouse_behavior_recursive = 1
texture = ExtResource("19_nlk32")
